adjustments made to padding around hero paragraph to ensure scroll to element feature doesnt cut off any text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,8 +111,8 @@ html {
 
 /* Welcome Paragraph */
 .welcomeTitle {
-    margin: 5% 0;
-    padding: 0 5%;
+    margin: 0 0;
+    padding: 5%;
     text-align: center;
 }
 
